--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,19 @@
 chrome-profiler-events*.json
 speed-measure-plugin*.json
 
+### Angular ###
+## Angular ##
+# compiled output
+dist/
+tmp/
+app/**/*.js
+app/**/*.js.map
+
+# dependencies
+node_modules/
+bower_components/
+
+
 # IDEs and editors
 /.idea
 .project
