--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.4",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
     "@angular/forms": "~8.2.4",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "angular-tslint-rules": "^1.20.1",
     "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
     "primeng": "^8.0.3",
