--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "angular-tslint-rules": "^1.20.1",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
+    "npm": "^6.12.0",
     "primeng": "^8.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
