--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "@angular/router": "~8.2.4",
     "@mapbox/mapbox-gl-geocoder": "^4.5.0",
     "angular-tslint-rules": "^1.20.1",
+    "bower": "^1.8.8",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.5.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
-    "npm": "^6.13.0",
-    "primeng": "^8.0.3",
+    "npm": "^6.13.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "tslint": "^5.20.0",
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.3",
-    "@angular/cli": "~8.3.3",
+    "@angular/cli": "^8.3.19",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
     "@types/jasmine": "~3.3.8",
