--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@mapbox/mapbox-gl-geocoder": "^4.5.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-tslint-rules": "^1.20.1",
     "bower": "^1.8.8",
     "express": "^4.17.1",
