--- a/package.json
+++ b/package.json
@@ -11,48 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.4",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.4",
-    "@angular/compiler": "~8.2.4",
-    "@angular/core": "~8.2.4",
-    "@angular/forms": "~8.2.4",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.4",
-    "@angular/platform-browser-dynamic": "~8.2.4",
-    "@angular/router": "~8.2.4",
-    "@mapbox/mapbox-gl-geocoder": "^4.5.0",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@mapbox/mapbox-gl-geocoder": "^4.5.1",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
-    "angular-tslint-rules": "^1.20.1",
+    "angular-tslint-rules": "^1.20.3",
     "bower": "^1.8.8",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.5.1",
-    "leaflet": "^1.5.1",
-    "mongodb": "^3.3.2",
-    "mongoose": "^5.7.3",
-    "npm": "^6.13.3",
+    "leaflet": "^1.6.0",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.5",
+    "npm": "^6.13.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.3",
-    "@angular/cli": "^8.3.19",
-    "@angular/compiler-cli": "~8.2.4",
-    "@angular/language-service": "~8.2.4",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/cli": "^8.3.21",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.10.54",
-    "codelyzer": "^5.0.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^8.10.59",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "typescript": "~3.5.3"
